--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -87,6 +87,7 @@
     <!-- <script type="text/javascript" src="../../ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script> -->
     <script src="{% static 'web/js/main.js' %}"></script>
     
+    <script src="{% static 'web/js/search.js' %}"></script>
     
     
     
