--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -115,7 +115,7 @@
 
               <img class="img-responsive popup-imagea" id="result" src="">
               <div class="text-center mt-3 poster-download-button">
-                <a id="download" class="btn-sm mx-auto btn btn-success " download>Download</a>
+                <a id="download" class="btn-sm mx-auto btn btn-primary" download>Download</a>
               </div>
             </div>
             <div class="close-btn">
@@ -159,15 +159,7 @@
     </section>
 
 
-    <!-- Searched ProductList start -->
-    <div class="tab-content" id="SearchedProduct">
-      <!-- popular-product start -->
-      <div id="popular-product" class="tab-pane active show">
-        <div class="row" id="rowImageViewDiv">
-        </div>
-      </div>
-    </div>
-
+  
 
 
 
@@ -187,8 +179,8 @@
 {% block js %}
 
 
-<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script> -->
-<!-- <script>
+<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+<script>
   $(document).ready(function () {
     $('#sucessful-login-message').fadeOut(3000)
   })  
