--- a/templates/web/profile-update.html
+++ b/templates/web/profile-update.html
@@ -46,6 +46,16 @@
                 {{user_form.shop_address}}
             </div>
             <div class="mb-3">
+                <label class="form-label">District</label>
+                <!-- <input type="text" class="form-control"> -->
+                {{user_form.district}}
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Pincode</label>
+                <!-- <input type="text" class="form-control"> -->
+                {{user_form.pincode}}
+            </div>
+            <div class="mb-3">
                 <label class="form-label">Category</label>
                 <!-- <input type="text" class="form-control"> -->
                 {{user_form.category}}
