--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -2089,7 +2089,7 @@ h6, .h6 {
   line-height: 1.2; }
 
 hr {
-  margin-top: 1rem;
+  margin-top: 0.3rem;
   margin-bottom: 1rem;
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1); }
@@ -13645,7 +13645,7 @@ dl {
 
 /* Image gallery stlyling */
 .container {
-  max-width: 900px;
+  max-width: 100%;
   margin: 0px auto 0;
   text-align: center;
 }
@@ -13685,7 +13685,7 @@ dl {
 }
 
 .img-popup img {
-  max-width: 65%;
+  max-width: 35%;
   width: 100%;
   opacity: 0;
   transform: translateY(-100px);
@@ -13864,6 +13864,9 @@ transition: all ease 0.8s;
   font-size: 11px;
 }
 @media only screen and (max-width:576px){
+  .usk-login-register{
+    width: 50% !important;
+  }
   .certificate{
     width: 180px !important;
     border: 0;
@@ -14557,7 +14560,7 @@ button.chatbtn, button.createbtn {
 @media (max-width: 575px) {
 
   .wrapper{
-      margin: 30px 15px;
+      margin: 30px 0px;
   }
 
   .wrapper .form-left{
@@ -17043,6 +17046,7 @@ outline: none;
   border: 1px solid #4B0082;
   border-radius: 10px;
   text-align: center;
+  margin-bottom: 26px;
   margin-top: 35px;
   font-size: 13.9px;
   padding: 5px 0px;
@@ -17108,3 +17112,98 @@ outline: none;
 .container-2:hover .icon {
   color: #93a2ad;
 }
+
+
+/* ========================certificate */
+
+.certificate-bg{
+  background: linear-gradient(135deg, #EDEDED 0%, #FFFFFF 100%) !important;
+  box-shadow: -2px 2px 4px rgb(194 194 194 / 20%), 2px -2px 4px rgb(194 194 194 / 20%), -2px -2px 4px rgb(255 255 255 / 90%), 2px 2px 5px rgb(194 194 194 / 90%), inset 1px 1px 2px rgb(255 255 255 / 30%), inset -1px -1px 2px rgb(194 194 194 / 50%);
+  border-radius: 3.88604px;
+  width: 100%;
+  height: auto;
+}
+.ombre-externe {
+  background-color: white;
+  padding: 1rem;
+  -moz-box-shadow: 20px 20px 36px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 20px 20px 36px rgba(0,0,0,0.2);
+  box-shadow: 20px 20px 36px rgba(0,0,0,0.2);
+}
+.peinture-ombre-interne-fine {
+  background-color:#fff;
+  margin: 20px 0px;
+}
+.usk-logo-certificate{
+  width: 58%;
+}
+.certificate-head-bg{
+  width: 100%;
+  height: 70px;
+  margin: 40px auto;
+  background-color: #2d4f8f;
+}
+@import url('https://fonts.cdnfonts.com/css/wilson-hawk');
+.creatificate-head{
+  font-size: 50px;
+  font-family: 'Wilson hawk', sans-serif;
+  color: #fff;
+}
+@import url('https://fonts.cdnfonts.com/css/poppins');
+.date{
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+}
+@import url('https://fonts.cdnfonts.com/css/montserrat');
+.certificate-present{
+  font-size: 20px !important;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+}
+.hr-margin{
+  margin-top:28px;  
+}
+hr.certificate-hr{
+  width: 50%;
+  margin-top: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  border: 1px solid #000;
+}
+.certificate-present-left{
+  font-size: 17px !important;
+  font-family: 'Montserrat', sans-serif;
+  font-weight:400;
+}
+.agent-details{
+  font-size: 17px;
+  font-family: 'Poppins', sans-serif;
+  margin: 0px;
+}                      
+.seal-image{
+  width: 28%;
+}
+.sign-image{
+  width: 50%;
+}
+.username{
+  font-size: 38px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight:600;
+} 
+.footer-foot{
+  margin-top: 106px;
+  width: 100%;
+  height: 32px;
+  background-color:#2d4f8f ;
+}            
+.download-button{
+  margin: 35px 482px;
+  padding: 10px;
+  border-radius: 17px;
+  font-size: 15px;
+  color: #fff;
+  background-color: #0050e3;
+}
+
