--- a/templates/invoice/customer_form.html
+++ b/templates/invoice/customer_form.html
@@ -2,32 +2,32 @@
 {% load static %}
 {%load crispy_forms_tags %} 
 
-
+<link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
+<title>USKLOGIN.COM</title>
 {% block title %}{% endblock %}
 {% block content %}
+
 <style>
-    @media only screen and (max-width:576px){
-        .form-control {
-    display: block;
-    width: 100%;
-    padding: 1rem 0.75rem !important;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0.25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+ .save-button{
+  border-radius: 10px;
+  border: 1px solid #11831f;
+  padding: 3px 17px;
+  background-color: #11831f;
+  color: #fff;
+  font-weight: 400;
 }
-    }
+.back{
+    color: #000;
+    text-decoration: none;
+    margin-right: 14px;
+}
 </style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+
 <h2>Profile</h2>
 <hr>
 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
@@ -63,7 +63,7 @@
                     </tr>
                 {% endfor %}
             </table>
-            <input type="submit" value="Save"/> <a href="{% url 'invoices:customer-list' %}">back to the list</a>
+            <a href="{% url 'invoices:customer-list' %}" class="back"><i class="fa-solid fa-arrow-left-long"></i> <span style="color: #000;">Back</span> </a><input type="submit" value="Save" class="save-button"/> 
         </form>
     </div>
 
