--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -44,6 +44,12 @@
                             <div class="col-md-12"><label class="labels">Shop Address</label>
                                 <input type="text" class="form-control" value="{{logined_user.shop_address}}">
                             </div>
+                            <div class="col-md-12"><label class="labels">District</label>
+                                <input type="text" class="form-control" value="{{logined_user.district}}">
+                            </div>
+                            <div class="col-md-12"><label class="labels">Pincode</label>
+                                <input type="text" class="form-control" value="{{logined_user.pincode}}">
+                            </div>
                             
                         </div>
                       
@@ -68,7 +74,7 @@
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-6 col-6">
                                 <div class="d-flex justify-content-between align-items-center experience">
-                                    <a href="">
+                                    <a href="{% url 'web:certificate_view' %}">
                                         <button class="certificate" id="chatBtn"><i class="fa-solid fa-download"></i> Download Certificate</button>
                                     </a>
                                 </div>
