--- a/templates/web/register.html
+++ b/templates/web/register.html
@@ -39,7 +39,7 @@
     <div class="container">
         <div class="row">
             <div class="text-center pt-5">
-                <img src="{% static 'web/images/USKLKOG.png' %}" style="width:24%;" alt="">
+                <img src="{% static 'web/images/USKLKOG.png' %}" style="width:24%;" class="usk-login-register" alt="">
             </div>
 
             <div class="wrapper">
@@ -79,6 +79,20 @@
 
                         </div>
                         <div class="col-sm-6 mb-3">
+                            <label>District</label>
+                            <!-- <input type="text" name="district" id="district" class="input-field" value="{{phone}}"> -->
+                            {{user_form.district}}
+                        
+
+                        </div>
+                        <div class="col-sm-6 mb-3">
+                            <label>Pincode</label>
+                            <!-- <input type="text" name="pincode" id="pincode" class="input-field" value="{{phone}}"> -->
+                            {{user_form.pincode}}
+                        
+
+                        </div>
+                        <div class="col-sm-12 col-12 mb-3">
                             <label>Category</label>
                             <!-- <input type="text" name="category" id="category" class="input-field"> -->
                             {{user_form.category}}
