--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -32,7 +32,7 @@
                     <div class="tm_invoice_info tm_mb25">
                         <div class="tm_card_note tm_mobile_hide"><b class="tm_primary_color">Payment Method: </b>Paypal, Western Union</div>
                         <div class="tm_invoice_info_list tm_white_color">
-                            <p class="tm_invoice_number tm_m0">Invoice No: <b>#LL93784</b></p>
+                            <p class="tm_invoice_number tm_m0">Invoice No: <b>{{ invoices.invoice.invoice_no }}</b></p>
                             <p class="tm_invoice_date tm_m0">Date: <b>01.07.2022</b></p>
                         </div>
                         <div class="tm_invoice_seperator tm_accent_bg"></div>
@@ -70,11 +70,14 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                      {% for item in invoces %}
+                                      print{{invoice.services_name}}
+                                      {% endfor %}
                                         <tr>
-                                            <td class="tm_width_3">1. Website Design</td>
-                                            <td class="tm_width_4">Six web page designs and three times revision</td>
-                                            <td class="tm_width_2">$350</td>
-                                            <td class="tm_width_1">1</td>
+                                            <td class="tm_width_3">1. {{ invoices.services_name }}</td>
+                                            <td class="tm_width_4">{{invoices.descripton}}</td>
+                                            <td class="tm_width_2">${{invoices.services_charge}}</td>
+                                            <td class="tm_width_1">{{invoices.qty}}</td>
                                             <td class="tm_width_2 tm_text_right">$350</td>
                                         </tr>
                                         <tr>
