--- a/templates/invoice/invoice_list.html
+++ b/templates/invoice/invoice_list.html
@@ -8,7 +8,8 @@
             {% for profile in object_list %}
                 <li>{{ profile }}  | <a
                         href="{% url 'invoices:invoice-update' profile.pk %}">edit</a>
-                    <a href="{% url 'invoices:invoice-delete' profile.pk %}">delete</a>
+                        <a href="{% url 'invoices:invoice-delete' profile.pk %}">delete</a>
+                    <a href="{% url 'invoices:invoice-download' profile.pk %}">Download</a>
                 </li>
             {% empty %}
                 <li>No profile yet.</li>
