Certificat_downloading_style_issue

--- a/templates/web/certificate.html
+++ b/templates/web/certificate.html
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <a href="{% url 'web:certificate_view' %}">
+    <a href="{% url 'web:pdf_certificate' %}">
       <div class="download-button">
         Download
       </div>
