--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -26,7 +26,7 @@
       {% endfor %}
     </div>
     {% endif %} -->
-  
+
 
 
     <!-- service head display -->
@@ -123,6 +123,8 @@
               <div class="bar"></div>
             </div>
           </div>
+        </div>
+      </div>
 
 
 
@@ -159,7 +161,7 @@
     </section>
 
 
-  
+
 
 
 
