--- a/templates/web/service-searching.html
+++ b/templates/web/service-searching.html
@@ -1,29 +1,58 @@
+{% load humanize %}
+{% load custom_tags %}
+
+
+
 <div id="service-list">
     <div class="row">
-      {% for subservice in services %}
-      <div class="col-lg-2 col-md-3 col-sm-6 col-6 pb-3" id="viewserviceDiv">
-        <div class="serviceBox">
-            <img src="{{subservice.image.crop.179x179}}" class="sub-service-img pb-2" alt="">
-            <h3 class="title">{{subservice.title}}</h3>
-          <div>
-            <a href="{{subservice.link_to_official_website}}" class="access" rel="noopener noreferrer" target="_blank">ACCESS</a>
-            <a href="{% url 'services:serviceDetails' subservice.slug %}" class="view-more" >DETAILS</a>
+      <div class="row">
+        {% for posters in result %}
+        {% with posters|class_name as cls %}
+        {% if cls == 'Services' %}
+        <div class="col-lg-2 col-md-3 col-sm-6 col-6 pb-3" id="viewserviceDiv">
+          <div class="serviceBox">
+              <img src="{{posters.image.crop.179x179}}" class="sub-service-img pb-2" alt="">
+              <h3 class="title">{{posters.title}}</h3>
+            <div>
+              <a href="{{posters.link_to_official_website}}" class="access" rel="noopener noreferrer" target="_blank">ACCESS</a>
+              <a href="{% url 'services:serviceDetails' posters.slug %}" class="view-more" >DETAILS</a>
+            </div>
+          </div>
+        </div>
+        {% else %}
+        <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+          <div class="container__img-holder">
+            <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
+    
+            <div class="text-center mt-3">
+              <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
+                data-source="{{posters.id | apnumber }}">Click to Download</button>
+            </div>
+    
+            <span>{{posters.title}}</span>
+          </div>
+        </div>
+        {% endif %}
+        {% endwith %}
+        {% endfor %}
+        <div class="img-popup">
+          <div class="container" id="resultContainer" style="display: none;">
+    
+            <img class="img-responsive popup-imagea" id="result" src="">
+            <div class="text-center mt-3 poster-download-button">
+              <a id="download" class="btn-sm mx-auto btn btn-primary" download>Download</a>
+            </div>
+          </div>
+          <div class="close-btn">
+            <div class="bar"></div>
+            <div class="bar"></div>
           </div>
         </div>
       </div>
-      {% endfor %}
-
-      {% comment %}
-      <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-        <div class="serviceBox">
-          <img src="{% static 'web/images/faces/face1.jpg' %}" class="sub-service-img pb-2" alt="">
-           <h3 class="title">Service</h3>
-           <div class="pt-2">
-             <a href="{% url 'services:serviceDetails' %}" class="view-more">View More</a>
-           </div>
-         </div>
-      </div>
-      {% endcomment %}
+      
+     
     </div>  
 
   </div>
+
+ 
