--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -60,9 +60,9 @@
               <span><i class='fa fa-bell'></i></span>
               <span class="badge" id="notification-badge">0</span>
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="notifications-dropdown"
+          <ul class="dropdown-menu notification-bar" aria-labelledby="navbarDropdown" id="notifications-dropdown"
               data-popper-placement="bottom-end"
-              style="position: absolute; inset: 0px auto auto 0px;margin: 25px -59px; transform: translate3d(-70px, 42px, 0px);">
+              style="position: absolute; inset: 0px auto auto 0px;margin: 51px -103px;; transform: translate3d(-70px, 42px, 0px);">
               
               {% for i in notifications %}
               <li class="dropdown-item">{{i.message}}</li>
@@ -93,7 +93,7 @@
     </div>
   </nav>
 
-
+{% block js %}
  {{ room_name|json_script:"room-name" }}
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
@@ -118,7 +118,5 @@
             console.error('Chat socket closed unexpectedly');
         };
 
-      
-
-       
     </script>
+{% endblock %}
