--- a/templates/invoice/invoice_form.html
+++ b/templates/invoice/invoice_form.html
@@ -86,7 +86,7 @@
         $('.formset_row').formset({
             addText: 'add invoice items details',
             deleteText: 'remove',
-            prefix: 'familymember_set'
+            prefix: 'invoicesitems_set'
         });
     </script>
     <!-- CUSTOM JS -->
